<resources>
    <string name="app_name">TCS</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">TCS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_choice">Choose</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="accnt">Bank Account Number</string>


    <string name="question1">1. What is the amount you want to invest ?</string>
    <string name="question1_choice1">Less than 10000</string>
    <string name="question1_choice2">Greater than 10000 but less than 50000</string>
    <string name="question1_choice3">Greater than 50000</string>

    <string name="question2">2. What is your annual income ?</string>

    <string name="question3">3. What is your age?</string>
    <string name="question3_choice1">Less than 40</string>
    <string name="question3_choice2">Between 40 and 60</string>
    <string name="question3_choice3">Greater than 60</string>


    <string name="question4">4. Are you married? </string>

    <string name="question5">5. Do you have a child? </string>
    <string name="question5_choice1">Yes</string>
    <string name="question5_choice2">No</string>

    <string name="question6">6. What is the risk quotient you are looking at? </string>
    <string name="question6_choice1">High</string>
    <string name="question6_choice2">Medium</string>
    <string name="question6_choice3">Low</string>

    <string name="question7">7. What is the duration of time for which you can keep the amount invetsed?</string>
    <string name="question7_choice1">Less than 6 months</string>
    <string name="question7_choice2">Between 6 to 12 months</string>
    <string name="question7_choice3">Greater than 12 months</string>

    <string name="question8">8. What is the percentage of return you are expecting?</string>
    <string name="error_valid_email_password">The password and account number combination is not valid</string>
    <string name="phone">Phone</string>
    <string name="success_message">Account created successfully</string>
    <string name="error_email_exists">This email already registered</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="navigation_drawer_open">open</string>
    <string name="title_activity_offers">offers</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
