<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.home.myapplication.Questionarre1"
    tools:showIn="@layout/activity_questionarre1">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:id="@+id/quiz_layout"
            android:background="#E8EAF6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/question1"
                    android:paddingBottom="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />
                <ImageButton
                    android:id="@+id/help"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@null"
                    android:onClick="help"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_help_black_24dp"
                    android:layout_toRightOf="@id/question1" />
            </RelativeLayout>
            <EditText
                android:id="@+id/question1_answer"
                android:layout_width="200dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:textColor="@color/primaryText"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/question2"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/help1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/question2"
                    android:background="@null"
                    android:paddingBottom="16dp"
                    android:onClick="help1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_help_black_24dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/question2_answer"
                android:layout_width="200dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textColor="@color/primaryText"
                android:inputType="number" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/question3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/question3"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/radio1"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question3_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question3_choice1" />

                <RadioButton
                    android:id="@+id/question3_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question3_choice2" />
                <RadioButton
                    android:id="@+id/question3_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question3_choice3" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/question4"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/question4_answer"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/question4"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/radio2"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question4_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question5_choice1" />

                <RadioButton
                    android:id="@+id/question4_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question5_choice2" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/question5"
                android:paddingBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/question5"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:id="@+id/radio3"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question5_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question5_choice1" />

                <RadioButton
                    android:id="@+id/question5_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question5_choice2" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/question6"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/question5_answer"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/question6"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/radio4"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question6_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question6_choice1" />

                <RadioButton
                    android:id="@+id/question6_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question6_choice2" />
                <RadioButton
                    android:id="@+id/question6_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question6_choice3" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/question7"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="16dp"
                android:text="@string/question7"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/radio5"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question7_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Less than 12 months" />

                <RadioButton
                    android:id="@+id/question7_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Between 1 and 3 years" />
                <RadioButton
                    android:id="@+id/question7_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Greater than 3 years" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
